--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+:root {    
+    --black: #000000;
+    
+    --background-color-1: #070707;
+    --background-color-2: #141a5e;
+    --background-color-other: #8d5656;
+
+    --osk-games-color-1: #2d64f1;
+    --osk-games-color-2: #57a6ff;
+
+    --primary-color: #aaacb3;
+    --primary-color-other: #e2efff;
+    --color-white: #ffffff;
+    --color-light: #e6e6f3;
+
+    --container-width-large: 75%;
+    --container-width-medium: 86%;
+    --container-width-small: 90%;
+
+    --transition: all 400ms ease;
+}
+
 .background {
     background-color: black;
     color: white;
@@ -28,4 +50,38 @@
     font-size: large;
     margin: 1em;
     text-align: center;
+    margin-top: 5em;
 }
+
+  :root {
+    --size: 20px;
+  }
+  
+  .colours-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -100;
+
+    background: 
+        conic-gradient(from 180deg at 50% 70%,
+            #ff1c1c 72.0000010728836deg,
+            #282bff 144.0000021457672deg,
+            #7a0471 216.00000858306885deg,
+            #0af788 288.0000042915344deg
+            1turn);
+    
+    width: 100%;
+    height: 100%;
+    mask:
+      radial-gradient(circle at 50% 50%, white 2px, transparent 2.5px) 50% 50% / var(--size) var(--size),
+      url("https://assets.codepen.io/605876/noise-mask.png") 256px 50% / 256px 256px;
+    mask-composite: intersect;
+    animation: flicker 18s infinite linear;
+  }
+    
+  @keyframes flicker {
+    to {
+      mask-position: 50% 50%, 0 50%;
+    }
+  }
