--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
 .background {
     background-color: black;
     color: white;
+
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .central_image {
